# model_execution_deploy_dataset

./: .gitignore  1.txt  CMakeLists.txt  Dockerfile  README.md  build.sh  run_all_tests.sh
assets/: age_googlenet.param  emotion_ferplus.param  fsanet-1x1.mnn  fsanet-1x1.onnx  fsanet-1x1.param  fsanet-1x1_float16.tflite  fsanet-1x1_float32.tflite  fsanet-var.mnn  fsanet-var.onnx  fsanet-var.param  fsanet-var_float16.tflite  fsanet-var_float32.tflite  gender_googlenet.param  pfld-106-lite.mnn  pfld-106-lite.param  pfld_landmarks copy.onnx  pfld_landmarks.mnn  pfld_landmarks_float16.tflite  pfld_landmarks_float32.tflite  ssrnet.mnn  ssrnet_age.onnx  ssrnet_age.param  ssrnet_age_float16.tflite  ssrnet_age_float32.tflite  ultraface-rfb-320.mnn  ultraface_detector.mnn  ultraface_detector.onnx  ultraface_detector.param  ultraface_detector_float16.tflite  ultraface_detector_float32.tflite  yolov5_detector.param
cmake/: mnn.cmake  ncnn.cmake  onnxruntime.cmake  opencv.cmake  tflite.cmake  tnn.cmake
examples/: CMakeLists.txt
examples/mnn/: CMakeLists.txt  age_googlenet_mnn.cpp  emotion_ferplus_mnn.cpp  example_mnn.cpp  fsanet_headpose_mnn.cpp  gender_googlenet_mnn.cpp  mnist_mnn.cpp  pfld_landmarks_mnn.cpp  ssrnet_age_mnn.cpp  ultraface_detector_mnn.cpp  yolov5_detector_mnn.cpp
examples/ncnn/: CMakeLists.txt  age_googlenet_ncnn.cpp  emotion_ferplus_ncnn.cpp  fsanet_headpose_ncnn.cpp  gender_googlenet_ncnn.cpp  mnist_ncnn.cpp  pfld_landmarks_ncnn.cpp  ssrnet_age_ncnn.cpp  ultraface_detector_ncnn.cpp  yolov5_detector_ncnn.cpp
examples/onnxruntime/: CMakeLists.txt  age_googlenet_onnxruntime.cpp  emotion_ferplus.cpp  emotion_ferplus_onnxruntime.cpp  example.cpp  fsanet_headpose.cpp  fsanet_headpose_onnxruntime.cpp  gender_googlenet.cpp  gender_googlenet_onnxruntime.cpp  mnist.cpp  mnist_onnxruntime.cpp  pfld_landmarks.cpp  pfld_landmarks_onnxruntime.cpp  ssrnet_age.cpp  ssrnet_age_onnxruntime.cpp  ultraface_detector.cpp  ultraface_detector_onnxruntime.cpp  yolov5_detector.cpp  yolov5_detector_onnxruntime.cpp
examples/tflite/: CMakeLists.txt  age_googlenet_tflite.cpp  emotion_ferplus_tflite.cpp  fsanet_headpose_tflite.cpp  gender_googlenet_tflite.cpp  mnist_tflite.cpp  pfld_landmarks_tflite.cpp  ssrnet_age_tflite.cpp  ultraface_detector_tflite.cpp  yolov5_detector_tflite.cpp
examples/tnn/: CMakeLists.txt  emotion_ferplus_tnn.cpp  fsanet_headpose_tnn.cpp  gender_googlenet_tnn.cpp  pfld_landmarks_tnn.cpp  ssrnet_age_tnn.cpp  ultraface_detector_tnn.cpp  yolov5_detector_tnn.cpp
scripts/: build_mnn.sh  build_ncnn.sh  build_onnxruntime.sh  build_tflite.sh  build_tnn.sh  prepare_dependencies.sh
src/: CMakeLists.txt  dummy.cpp
